--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,10 +131,7 @@ jobs:
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
                   pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk 2>/dev/null || exit 0)"
-
-                  echo Passed 1
-
-                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep -c demisto_sdk)"
+                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk  2>/dev/null || exit 0)"
 
                   echo Pylint exit code on Test directory: $pylint_test_result
                   echo Pylint exit code on Utils directory: $pylint_utils_result
