--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,8 +130,8 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
-                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk || exit 0)"
-                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk || exit 0)"
+                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk || true )"
+                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk || true)"
 
                   echo Pylint exit code on Test directory: $pylint_test_result
                   echo Pylint exit code on Utils directory: $pylint_utils_result
