--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,13 +130,15 @@ jobs:
 
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
-                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests | grep demisto_sdk || true )"
-                  pylint_utils_result="$(python3 -m pylint --errors-only ./Utils | grep demisto_sdk || true)"
 
-                  echo Pylint exit code on Test directory: $pylint_test_result
-                  echo Pylint exit code on Utils directory: $pylint_utils_result
+                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests) 2>dev/null || true"
+                  echo $pylint_test_result
 
-                  if [ $pylint_test_result -ne 0 ] || [ $pylint_utils_result -ne 0 ] ; then
+                  pylint_test_result_final="$(echo $pylint_test_result | grep demisto_sdk || true)"
+                  echo $pylint_test_result_final
+
+
+                  if [ -n $pylint_test_result ] || [ -n $pylint_utils_result ] ; then
                       echo Pylint exit code on Test directory: $pylint_test_result
                       echo Pylint exit code on Utils directory:$pylint_utils_result
                       exit 1
