--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,11 +131,7 @@ jobs:
             if [ -n "${DEMISTO_SDK_NIGHTLY}" ] ; then
                   echo Checking for sdk related pylint errors
 
-                  pylint_test_result="$(python3 -m pylint --errors-only ./Tests) 2>dev/null || true"
-                  echo $pylint_test_result
-
-                  pylint_test_result_final="$(echo $pylint_test_result | grep demisto_sdk || true)"
-                  echo $pylint_test_result_final
+                  ./Tests/scripts/pylint.sh
             fi
             exit 0
       - run:
